Change body padding for certain resolutions to prevent menu overlapping content.

--- a/assets/css/style-freenet-4.css
+++ b/assets/css/style-freenet-4.css
@@ -269,6 +269,19 @@ margin: 25px 20px;
   }
 }
 
+/* Padding to ensure first row isn't hidden by the navigation bar */
+@media screen and (min-width: 767px) and (max-width: 992px) {
+  body {
+	  padding-top: 6em;
+  }
+}
+
+@media screen and (min-width : 992px) and (max-width: 1200px) {
+  body {
+	  padding-top: 3em;
+  }
+}
+
 /*Progress Bars from CSS-tricks.
 
 - https://css-tricks.com/css3-progress-bars/
